Fix logo stretch issue in header

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ ul {
     list-style: none;
     justify-content: center;
     align-items: center;
-    font-size: 1.1;
+    font-size: 1.5vw;
 }
 
 a {
